# esp-dl

.claude/: settings.local.json
examples/: copy_to_golf_ball.bat  setup_golf_ball_project.bat
examples/cat_detect/.claude/: settings.local.json
examples/golf_ball_detect/: CMakeLists.txt  ESP32_Golf_Ball_Detection_Complete_Guide.md  FINAL_CONCLUSION_568x264.md  OV2640_ROI_LIMITATION.md  analyze_bbox_sizes.py  analyze_bounding_boxes.py  analyze_golf_ball_sizes.py  aspect_ratio_analysis.py  bit_analysis.py  bit_pattern_analysis.md  bounding_box_analysis_report.md  calculate_568_264_ratio.py  check_multiples.py  clean_build.bat  copy_golf_model.bat  fix_568x264_approach.py  ov2640_544_limit_analysis.md  ov2640_test_analysis.py  register_comparison.py  roi_544_vs_568_analysis.md  roi_analysis.md  sdkconfig.defaults  set_target_esp32s3.bat  test_register_analysis.py  test_roi_calculation.py  test_roi_registers.cpp  threshold_analysis.py  visualize_extreme_boxes.py
examples/golf_ball_detect/.claude/: settings.local.json
examples/golf_ball_detect/main/: CMakeLists.txt  app_main.cpp  camera_init.cpp  camera_init.hpp  draw_detection.cpp  draw_detection.hpp  wifi_server.cpp  wifi_server.hpp
examples/golf_ball_detect_backup/: CMakeLists.txt  copy_images.bat
examples/golf_ball_detect_backup/.claude/: settings.local.json
examples/golf_ball_detect_files/: sdkconfig.defaults
models/cat_detect/: CMakeLists.txt  cat_detect.cpp
models/golf_ball_detect/: CMakeLists.txt  Kconfig.projbuild  copy_model.bat  golf_ball_detect.cpp  golf_ball_detect.hpp
(+6 files in other folders)
